--- a/src/main/resources/static/public/index.html
+++ b/src/main/resources/static/public/index.html
@@ -11,11 +11,11 @@
             <div class="container">
                 <br/>
                 <div class="alert alert-success">
-                    <strong>If this looks ok...</strong> Bootstrap is working.
+                    <strong>If this looks ok...</strong> Bootstrap is working2.
                 </div>
             </div>
             <div class="container">
-                <a th:href="@{/public/click-to-edit}">Click To Edit</a>
+                <a th:href="@{/public/click-to-edit}">Click To Edit2</a>
             </div>
             <div class="container">
                 <a th:href="@{/public/infinite-scroll}">Infinite Scroll</a>
